# solana-spl-token-claimer

./: Anchor.toml  README.md
programs/token-claimer/: Cargo.toml
programs/token-claimer/src/: lib.rs
tests/: token-claimer.ts
